Fix rhyme input spacing to match lines

--- a/css/poem.styl
+++ b/css/poem.styl
@@ -194,6 +194,11 @@ small
     &:hover
         background #fff
 
+#rhymeform
+    p
+        height 16px
+
+
 .indent
     padding-left 1em
 
